make width of error messages flexible on small screens fixes #445

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -887,8 +887,11 @@ padding-right: 0;
   border-radius: 6px;
   -moz-border-radius: 6px;
   font-weight: 400;
-  width: 554px;
   margin: 20px 0 30px;
+
+  @include respond-min( $main_menu-mobile_menu_cutoff ) {
+    width: 554px;
+  }
 }
 
 #error, .errorExplanation, #hidden_request {
